# pico-examples

./: CMakeLists.txt
Debuger/: picoprobe.uf2
blink/: CMakeCache.txt  CMakeLists.txt  blink.c
temperature/: CMakeLists.txt  temperature.c  temperature.cpp
